# GLM

./: .gitignore  GLM.cabal  README.md
src/: Dot.hs  DotMain.hs  JSONMain.hs  Main.hs  Nesting.hs  Parser.hs  Parser2.hs  PropMain.hs  Tokenizer.hs
src/GLM/: Dot.hs  JSON.hs  Nesting.hs  Parser.hs  Tokenizer.hs
test/: IEEE_37node_small.glm  TestMain.hs
