name:                GLM
version:             0.1.0.0
synopsis:            GLM Project...
homepage:            http://github.com/sordina/GLM
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable GLM
  main-is:             Main.hs
  build-depends:       base -any
  hs-source-dirs:      src
  default-language:    Haskell2010